<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/first_number_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:autofillHints="@string/first_number_hint"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/first_number_hint"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/second_number_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/second_number_hint"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/second_number_hint"
            android:inputType="number|numberDecimal" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="add_click"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="subtract_click"
            android:text="@string/subtract_button" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="multiply_click"
            android:text="@string/multiply_button" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="divide_click"
            android:text="@string/divide_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>